[package]
name = "http_common"
version = "0.1.1"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Common types and operations for HTTP"
documentation = "https://docs.rs/http_common"
readme = "README.md"
repository = "https://github.com/sheroz/http_common"
license = "MIT"
keywords = ["http", "web", "network", "header", "parser"]
categories = ["web-programming", "network-programming", "parser-implementations"]
