[package]
name = "http-common"
version = "0.2.1"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Common types and operations for HTTP"
documentation = "https://docs.rs/http-common"
readme = "README.md"
repository = "https://github.com/sheroz/http-common"
license = "MIT"
keywords = ["http", "web", "network", "header", "parser"]
categories = ["web-programming", "network-programming", "parser-implementations"]
